@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.7.39) unstable; urgency=low
   * memcached-stock: close value on connect failure
   * http: implement remaining status codes
   * http-cache: allow caching empty response body
+  * http-cache: cache status codes 203, 206, 300, 301, 410
 
  --
 
